fix(Page): :memo: Fixing contrast color for links in light mode

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -64,7 +64,7 @@ p {
 
 a {
   @apply
-    dark:text-orange-400 text-blue-600
+    dark:text-orange-400 text-[#00008B]
     underline
     hover:cursor-pointer
 }
